--- a/Receita 1.html
+++ b/Receita 1.html
@@ -6,7 +6,7 @@
    
    <body>
  
-	
+	<a name='receita1'></a>
 	<p>O <strong>lámen</strong> (ou <strong>ramen</strong>, em japonês) é um prato da culinária japonesa que ficou famoso no mundo inteiro por seu sabor diferente e autêntico. Na verdade, ele é um prato criado pelos chineses que chegou ao Japão no século 19 e depois ganhou fama em vários outros países. Uma combinação de <strong>sopa e macarrão</strong>, ele pode ser feito com carne de porco, de boi, de frango ou até vegetariano. O caldo pode ser feito com vários ingredientes, como missô, algas e vegetais. Se você já tentou experimentar mas nunca encontrou pela sua cidade, agora você já pode fazer em casa! Hoje o TudoGostoso irá ensinar como fazer um delicioso <strong>ramen (lámen) japonês de frango</strong>. Confira a receita completa abaixo e bom apetite!</p>
 	
     <h3>Ingredientes do lámen</h3>
@@ -33,23 +33,33 @@
 	<ol>
 	
 	  <li>O primeiro passo para preparar a sua receita é limpar bem os filés de frango.</li>
+	  </br>
 	  <li>Em seguida, tempere-os com sal e pimenta a gosto.</li>
+	  </br>
 	  <li>Aqueça uma frigideira com azeite em fogo alto.</li>
+	  </br>
 	  <li>Refogue o alho com gengibre até ficar levemente dourado.</li>
+	  </dr>
 	  <li>Abaixe o fogo, acrescente o frango e deixe dourar dos dois lados.</li>
+	  </br>
 	  <li>Acrescente aproximadamente 1/2 xícara (chá) de água e o shoyu.</li>
+	  </br>
 	  <li>Cozinhe o frango por 5 minutos de cada lado. Reserve.</li>
+	  </br>
       <li>Em uma panela separada, coloque o lámen instantâneo para cozinhar junto com o tempero que vem com ele.</li>
+	  </br>
 	  <li>Quando estiver pronto, retire o macarrão mas reserve o caldo.</li>
+	  </br>
 	  <li>No caldo de cozimento, cozinhe a cenoura descascada, o shimeji e o ovo.</li>
+	  </br>
 	  <li>Em uma tigela grande, coloque o lámen, acrescente os legumes com o caldo, a folha de nori, o ovo cozido cortado ao meio e, se preferir, adicione shoyu.</li>	  
+	  </br>
 	  <li>Sirva com cebolinha salpicada a gosto.</li>
-	  <li></li>
-	
+		
 	<ol>
 	
-	
-	<p><a href="inicio.htm" title="Esse link volta para o início">Voltar</a></p>
+	<p><a href="file:///C:/Users/raian/OneDrive/Área%20de%20Trabalho/HTML/HTML-PROA/Receita%202.html">Ir para resceita 2</a></p>
+	<p><a href = "https://blog.tudogostoso.com.br/dicas-de-cozinha/lamen-ou-ramen/">site original</a></p>
 	
 	
    </body>
