Add vídeos e imagens

--- a/Receita 1.html
+++ b/Receita 1.html
@@ -2,10 +2,12 @@
  
    <head>
     <tittle><h1>Receita de Lamen Lamen Japonês</h1></tittle>
-   </head>
+   </head> 	
    
    <body>
- 
+   
+    <img src = "../Media/images/waffle.jpg" alt = "lamen gostoso hmmmmm" title = "Lamen" width = '240'/>
+
 	<a name='receita1'></a>
 	<p>O <strong>lámen</strong> (ou <strong>ramen</strong>, em japonês) é um prato da culinária japonesa que ficou famoso no mundo inteiro por seu sabor diferente e autêntico. Na verdade, ele é um prato criado pelos chineses que chegou ao Japão no século 19 e depois ganhou fama em vários outros países. Uma combinação de <strong>sopa e macarrão</strong>, ele pode ser feito com carne de porco, de boi, de frango ou até vegetariano. O caldo pode ser feito com vários ingredientes, como missô, algas e vegetais. Se você já tentou experimentar mas nunca encontrou pela sua cidade, agora você já pode fazer em casa! Hoje o TudoGostoso irá ensinar como fazer um delicioso <strong>ramen (lámen) japonês de frango</strong>. Confira a receita completa abaixo e bom apetite!</p>
 	
@@ -57,6 +59,8 @@
 	  <li>Sirva com cebolinha salpicada a gosto.</li>
 		
 	<ol>
+	
+	<iframe width="560" height="315" src="https://www.youtube.com/embed/q2Nuoz4fSBo" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 	
 	<p><a href="file:///C:/Users/raian/OneDrive/Área%20de%20Trabalho/HTML/HTML-PROA/Receita%202.html">Ir para resceita 2</a></p>
 	<p><a href = "https://blog.tudogostoso.com.br/dicas-de-cozinha/lamen-ou-ramen/">site original</a></p>
