--- a/Receitas/Receita 1.html
+++ b/Receitas/Receita 1.html
@@ -4,13 +4,18 @@
     <tittle><h1>Receita de Lamen Lamen Japonês</h1></tittle>
    </head>
    
+   
    <body>
-	<a name='receita1'></a>
+    <fieldset>
+	
 	<p>O <strong>lámen</strong> (ou <strong>ramen</strong>, em japonês) é um prato da culinária japonesa que ficou famoso no mundo inteiro por seu sabor diferente e autêntico. Na verdade, ele é um prato criado pelos chineses que chegou ao Japão no século 19 e depois ganhou fama em vários outros países. Uma combinação de <strong>sopa e macarrão</strong>, ele pode ser feito com carne de porco, de boi, de frango ou até vegetariano. O caldo pode ser feito com vários ingredientes, como missô, algas e vegetais. Se você já tentou experimentar mas nunca encontrou pela sua cidade, agora você já pode fazer em casa! Hoje o TudoGostoso irá ensinar como fazer um delicioso <strong>ramen (lámen) japonês de frango</strong>. Confira a receita completa abaixo e bom apetite!</p>
    
     <img src = "../Media/images/lamen.png" alt = "lamen gostoso hmmmmm" title = "lamen" width = '240'>
+    </fieldset>	
 	
-    <h3>Ingredientes do lámen</h3>
+	<fieldset>
+    <legend><h3>Ingredientes do lámen</h3></legend>
+	
 	<ul>
 	    
 		<li>300 g de filé de frango</li>
@@ -28,6 +33,7 @@
 		<li>sal e pimenta-do-reino a gosto</li>
 	    
 	</ul>
+	</fieldset>
 	
 	<h3>Modo de preparo</h3>
 	
