--- a/formulario/table.html
+++ b/formulario/table.html
@@ -7,8 +7,10 @@
    <body>
 
     <table border = '1'>
+	  
 	  <thead>
-	    <tr>
+	  
+		<tr>
 		
 		 <th> bom dia</th>
 		
@@ -16,7 +18,8 @@
 	  </thead>
 	  
 	  <tbody>
-	  
+        
+        <!--o tr table role delimita uma celula dentro da tabela-->		
 	    <tr>
 		<td>opa</td>
 	    </tr>
