--- a/formulario/table.html
+++ b/formulario/table.html
@@ -6,12 +6,14 @@
 
    <body>
 
+    <!--cria um tabela -->
     <table border = '1'>
 	  
 	  <thead>
 	  
 		<tr>
 		
+		 <!--Centraliza e e deixa dentro da borda da tabela'-->
 		 <th> bom dia</th>
 		
 		</tr>
