--- a/Site subsubnautica/Pagina_principal.html
+++ b/Site subsubnautica/Pagina_principal.html
@@ -1,15 +1,29 @@
 <html>
 
 <head>
+
+   <link rel="icon" href="midia/fotos/favicon.ico" type="image/x-icon">
+
    <title>SUBNAUTICA</title>
 </head>
 
    <body>
     
 	 <h2>O que é subnautica</h2>
-	 <p><strong>Subnautica</strong> é um jogo de aventura e exploração para <strong>PC</strong> e <strong>Xbox One</strong> e <strong>ps4</strong>, onde criaturas e tecnologias alienígenas habitam o fundo do mar. No game, o jogador literalmente mergulha nas profundezas do desconhecido, em um mundo repleto de corais, recursos e mistérios. Confira dicas e veja como das os primeiros passos neste jogo de sobrevivência.</p>
+	 <p name = "intro" > <strong>Subnautica</strong> é um jogo de aventura e exploração para <strong>PC</strong> e <strong>Xbox One</strong> e <strong>ps4</strong>, onde criaturas e tecnologias alienígenas habitam o fundo do mar. No game, o jogador literalmente mergulha nas profundezas do desconhecido, em um mundo repleto de corais, recursos e mistérios. Confira dicas e veja como das os primeiros passos neste jogo de sobrevivência.</p>
 	
 	 <center><img src = "midia/fotos/Subnautica_foto_capa.jpg" alt = "Subnautica foto de capa" title = "capa subnautica" width = '240'  ></center>
+	 
+	 <h2>O básico para sobreviver</h2>
+	 
+	 <p nome = "subreviver" >Subnautica é um jogo focado na sobrevivência. Ou seja, subentende-se que o principal objetivo seja a exploração, caça e coleta de recursos. Entretanto, há mais para se descobrir do que atacar, além de mistérios que fazem a parte alienígena de Subnautica ser realmente interessante.
+	 
+	 <br>
+	 <img src = "midia/fotos/Subnautica_foto_sobreviver.jpg" alt = "Foto algas no subnautica" title = "Sobreviver" width = '240'>
+	 <br>
+	 
+	 O progresso é medido pelas tecnologias (blueprints) descobertas. Elas estão dispersas no mar, em partes naufragadas, corais ou perto de criaturas desconhecidas – e, às vezes, bem agressivas. Usando equipamentos avançados é possível explorar profundidades maiores,
+	 </p>
 	
    </body>
    
