--- a/Site subsubnautica/contato.html
+++ b/Site subsubnautica/contato.html
@@ -1,8 +1,13 @@
 <html>
 
-<head>
- <title>Contato</title>
-</head>
+   <head>
+     
+	 
+	 <link rel="icon" href="midia/fotos/favicon.ico" type="image/x-icon">
+
+     <title>Contato</title>
+   
+   </head>
 
    <body>
     <section>
