--- a/Site subsubnautica/Pagina_principal.html
+++ b/Site subsubnautica/Pagina_principal.html
@@ -12,18 +12,34 @@
 	 <h2>O que é subnautica</h2>
 	 <p name = "intro" > <strong>Subnautica</strong> é um jogo de aventura e exploração para <strong>PC</strong> e <strong>Xbox One</strong> e <strong>ps4</strong>, onde criaturas e tecnologias alienígenas habitam o fundo do mar. No game, o jogador literalmente mergulha nas profundezas do desconhecido, em um mundo repleto de corais, recursos e mistérios. Confira dicas e veja como das os primeiros passos neste jogo de sobrevivência.</p>
 	
-	 <center><img src = "midia/fotos/Subnautica_foto_capa.jpg" alt = "Subnautica foto de capa" title = "capa subnautica" width = '240'  ></center>
+	 <center><img src = "midia/fotos/Subnautica_foto_capa.jpg" alt = "Subnautica foto de capa" title = "capa subnautica" width = '500'  ></center>
 	 
 	 <h2>O básico para sobreviver</h2>
 	 
 	 <p nome = "subreviver" >Subnautica é um jogo focado na sobrevivência. Ou seja, subentende-se que o principal objetivo seja a exploração, caça e coleta de recursos. Entretanto, há mais para se descobrir do que atacar, além de mistérios que fazem a parte alienígena de Subnautica ser realmente interessante.
 	 
-	 <br>
-	 <img src = "midia/fotos/Subnautica_foto_sobreviver.jpg" alt = "Foto algas no subnautica" title = "Sobreviver" width = '240'>
-	 <br>
+	 <center><br>
+	 <img src = "midia/fotos/Subnautica_foto_sobreviver.jpg" alt = "Foto algas no subnautica" title = "Sobreviver" width = '500'>
+	 <br></center>	
 	 
-	 O progresso é medido pelas tecnologias (blueprints) descobertas. Elas estão dispersas no mar, em partes naufragadas, corais ou perto de criaturas desconhecidas – e, às vezes, bem agressivas. Usando equipamentos avançados é possível explorar profundidades maiores,
+	 O progresso é medido pelas tecnologias (blueprints) descobertas. Elas estão dispersas no mar, em partes naufragadas, corais ou perto de criaturas desconhecidas – e, às vezes, bem agressivas. Usando equipamentos avançados é possível explorar profundidades maiores,biomas com temperaturas elevadas e águas envenenadas pela radiação.
 	 </p>
+	 
+	 
+	 <h2>Funções vitais</h2>
+	 <p name = "funcoas_vitais">
+	 Subnautica não é diferente de outros jogos de sobrevivência. Na parte lateral da tela, temos as funções básicas do personagem – vida, oxigênio, fome e sede – que devem ser mantidas a qualquer custo. A vida é recuperada com o First Aid Kit. O item pode ser fabricado ou pego de graça na estação do Medical Kit Fabricator a cada 30 minutos.
+	   
+	 <center><br> 
+	 <img src = "midia/fotos/subnautica_foto_essenciais.jpg" alt = "Controlar sede, fome e o nível de oxigênio é essencial em Subnautica" title = "sobrevivenciometro" width = "500">
+	 <br></center>
+	 
+	 Fome e sede são saciados com comida e líquidos de origem animal. Não é necessário um item especial, como uma rede para pescá-los. Basta chegar perto do peixe e clicar para pegá-lo. O oxigênio é o mais importante, pois além de mantê-lo vivo embaixo d’água, também mede a distância que você pode explorar. Ou seja, quanto maior for a quantidade de oxigênio, mais tempo você poderá permanecer dentro do mar.
+	 
+	 </p>
+	
+	
+	
 	
    </body>
    
