--- a/Site subsubnautica/Pagina_principal.html
+++ b/Site subsubnautica/Pagina_principal.html
@@ -34,12 +34,32 @@
 	 <img src = "midia/fotos/subnautica_foto_essenciais.jpg" alt = "Controlar sede, fome e o nível de oxigênio é essencial em Subnautica" title = "sobrevivenciometro" width = "500">
 	 <br></center>
 	 
-	 Fome e sede são saciados com comida e líquidos de origem animal. Não é necessário um item especial, como uma rede para pescá-los. Basta chegar perto do peixe e clicar para pegá-lo. O oxigênio é o mais importante, pois além de mantê-lo vivo embaixo d’água, também mede a distância que você pode explorar. Ou seja, quanto maior for a quantidade de oxigênio, mais tempo você poderá permanecer dentro do mar.
-	 
+	 Fome e sede são saciados com comida e líquidos de origem animal. Não é necessário um item especial, como uma rede para pescá-los. Basta chegar perto do peixe e clicar para pegá-lo. O oxigênio é o mais importante, pois além de mantê-lo vivo embaixo d’água, também mede a distância que você pode explorar. Ou seja, quanto maior for a quantidade de oxigênio, mais tempo você poderá permanecer dentro do mar.	 
 	 </p>
 	
-	
-	
+     <h2>Biomas (biomes)</h2>
+     <p name = "biomas">
+	 Subnautica possui diversos biomas (biomes). Cada região tem sua própria fauna e flora que difere das demais, além de recursos únicos e necessários para a sua jornada. O local onde você inicia o jogo é chamado de Safe Shallows, uma região relativamente segura e com animais passivos, ótima para procurar por comida e matéria-prima.
+	 
+	 <center><br>
+     <img src = "midia/fotos/Subnautica_bioma.jpg" alt = "Mapa de biomas de subnautica" title = "biomas" width = "500">
+     </center><br>	 
+		
+	 A navegação por fundo do mar pode ser um tanto confusa, especialmente no começo. Enquanto você não possui veículos, use a localização da Aurora – que se encontra ao leste – para guiar-se no mapa. Mais para frente no jogo, você poderá criar um item chamado Beacon que é usado para marcar pontos específicos no fundo do mar.
+	 </p>	 
+	 
+	 <h2>Tecnologias (blueprints)</h2>
+     <p>
+	 
+	 As tecnologias são parte fundamental do progresso e da história de Subnautica. O seu papel, como sobrevivente, é buscar por qualquer recurso que o possibilite viver e, futuramente, escapar do local. No começo, você começará com algumas receitas (blueprints) para a fabricação de itens básicos, como tanque de oxigênio e scanner.
+	 
+	 <center><br>
+	 <img src = "midia/foto/subnautica_foto_blueprints.jpg" alt = "PDA do subnautica" title = "PDA" width = "500">
+	 </center><br>
+	 
+	 Como dito antes, ao longo da jornada você encontrará tecnologias aprimoradas, incluindo upgrades necessários para explorar biomas complexos e de difícil acesso. A chave para avançar é entender a ordem de montagem dos itens. Um item precisará de outro para ser criado.
+	  
+	 </p>	 
 	
    </body>
    
