--- a/Site subsubnautica/Pagina_principal.html
+++ b/Site subsubnautica/Pagina_principal.html
@@ -49,17 +49,27 @@
 	 </p>	 
 	 
 	 <h2>Tecnologias (blueprints)</h2>
-     <p>
+ 
+    <center> 
+	<p name = "tecnologias">
 	 
 	 As tecnologias são parte fundamental do progresso e da história de Subnautica. O seu papel, como sobrevivente, é buscar por qualquer recurso que o possibilite viver e, futuramente, escapar do local. No começo, você começará com algumas receitas (blueprints) para a fabricação de itens básicos, como tanque de oxigênio e scanner.
 	 
 	 <center><br>
-	 <img src = "midia/foto/subnautica_foto_blueprints.jpg" alt = "PDA do subnautica" title = "PDA" width = "500">
-	 </center><br>
+     <img src = "midia/fotos/subnautica_foto_blueprints.jpg" alt = "PDA (ferramenta do subnautica)" title = "PDA" width = "500">
+     </center><br>	
 	 
 	 Como dito antes, ao longo da jornada você encontrará tecnologias aprimoradas, incluindo upgrades necessários para explorar biomas complexos e de difícil acesso. A chave para avançar é entender a ordem de montagem dos itens. Um item precisará de outro para ser criado.
 	  
 	 </p>	 
+	 </center>
+	
+	 <h2></h2>
+	 <p>
+	 
+	 
+	 </p>
+	
 	
    </body>
    
