--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -75,9 +75,10 @@
 	 
 	 Em seguida, saia do Lifepod pela escotilha no chão ou escada para o topo. Antes de começar a exploração, pegue um pouco de comida e água. É prático ter uma reserva de alimentos e líquidos para qualquer eventualidade. Contudo, não faça um estoque grande, pois os alimentos têm prazo de validade – e você precisará de espaço no inventário.
 	 
+	 
 	 <center><br>
-	 <img src = "midia/foto/subnautica_foto_limestone.jpg" alt ="minerio" title = "minerio" width = "500">
-	 <br></center>	
+	 <img src = "../midia/fotos/subnautica_foto_limestone.jpg" alt = "Scanner" title = "Scanner" width = "500">
+	 <br></center>
 
 	 Capture o Pepper e o Bladderfish. O primeiro servirá de comida e o segundo se transformará em água. Você provavelmente encontrará algumas rochas pelo caminho chamadas de Limestone. Quebre-as para coletar Titanium e Copper Ore, material para fabricar o Scanner, tanque de oxigênio e Fins, três itens muito importantes para o começo do jogo.	
 	 
