--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -105,6 +105,24 @@
 	 A segunda ferramenta mais importante é o Scanner. Com esse objeto você registrará os blueprints e irá catalogar a vida marina extraterrestres.
 
 	 A receita do item pede Titanium e uma bateria (Battery). Pegue dois Acid Mushroom – cogumelos de cor lilás encontrados perto do Lifepod – e um Copper Ore para criá-la no Fabricator. Depois use-a junto com o outro material para montar o Scanner. Coloque-o na barra inferior de atalhos. 
+	 
+	 
+	 <center><br>
+	 <img src = "../midia/fotos/subnautica_foto_tanque_O2.jpg" alt = "Scanner" title = "Scanner" width = "500">
+	 <br></center>
+	 
+	 Por fim, monte as barbatanas (Fins) no Fabricator para aumentar sua velocidade no mar em 15%. Upgrades também são bem-vindos. Assim que você que explorar as cavernas, colete Quatz para transforma-lo em vidro (Glass). Faça um segundo tanque de oxigênio e use o material para fazer o High Capacity O₂ Tank, um tanque com maior capacidade.
+	 
+	 <h3>Materiais</h3>
+	 
+	 <ul>
+	 
+	   <li><strong>Scanner:</strong> 1x Battery, 1x Titanium</li>
+	   <li><strong>Standard O2 Tank:</strong> 3x Titanium</li>
+	   <li><strong>Fins:</strong> 2x Silicone Rubber</li>
+	   <li><strong>High Capacity O2 Tank:</strong> 1x Standard O₂ Tank, 2x Glass, 1x Titanium</li>
+	 
+	 </ul>
 	 </p>
 	
 	
