--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -124,6 +124,51 @@
 	 
 	 </ul>
 	 </p>
+	 
+	 <h2>Survival Knife e Repair Tool</h2>
+	 
+	 <p>
+	 Agora que você já possui o Scanner e pode explorar com mais calma, é uma boa ideia ter uma maneira de se defender e consertar os estrados dentro do seu Lifepod. Apesar de ser uma arma branca, a Survival Knife não é exatamente um item de ataque e, sim, de defesa. Pode ser usada para espantar animais e também para cortar materiais.
+
+	 A Survival Knife é feita de Titanium e Silicone Rubber, um item derivado de Creepvine Seed Cluster, uma espécie de semente fluorescente que cresce em algas. Você vai encontrá-las na Kelp Forest, um bioma repleto de algas compridas, não muito longe do seu LifePod. O local é de fácil acesso, mas conta com a presença de Stalkers, um peixe agressivo. Se um deles vier a te atacar, use a faca para assustar o bicho e fuja.
+	 
+	 
+	 <center><br>
+	 <img src = "../midia/fotos/subnautica_foto_survival_knife.jpg" alt = "Faca de sobrevivencia" title = "sobrevivencia" width = "500">
+	 <br></center>
+	 
+	 O próximo objeto da lista é a Repair Tool. Você vai precisar de Titanium, Silicone Rubber e um material novo, o Cave Sulfur - um pó a base de enxofre encontrado em flores vermelhas, chamadas de Sulfur Plants. Tenha um cuidado extra ao coletar esse material, pois Crashfishs residem dentro das plantas onde há Cave Sulfur. São peixes agressivos, que nadam em sua direção e explodem, causando bastante dano.
+	 
+	 <h3>Materiais</h3>
+	 
+	 <ul>
+	 
+	    <li><strong>Survival Knife:</strong> 1x Silicone Rubber, 1 Titanium</li>
+		
+		<li><strong>Repair Tool:</strong> 1x Silicone Rubber, 1x Cave Sulfur, 1x Titanium</li>
+	 
+	 </ul> 
+	 
+	 </p>
+	 
+	 <h2>Seaglide, Vehicle Bay e Seamoth</h2>
+	 
+	<p>
+	
+	Com tudo consertado e um pequeno estoque de materiais e ferramentas essenciais, é a vez de otimizar o processo de exploração. Enquanto alguns biomas são pacíficos, outros possuem criaturas ameaçadoras e climas pouco favoráveis para a sobrevivência humana. Para chegar a esses locais, você precisará de mais velocidade, iluminação e proteção.
+	
+	O primeiro passo é obter velocidade, o que te ajudará na busca dos próximos blueprints desse tutorial. Encontre os três fragmentos do Seaglide na Kelp Forest e Safe Shallows. O item é um pequeno veículo de propulsão, com um radar e uma lanterna (botão direto do mouse). Ele é movido a baterias, portanto, fabrique uma reserva e deixe no inventário.
+ 
+     <center><br>
+	 <img src = "../midia/fotos/subnautica_foto_seamoth.jpg" alt = "seamoth" title = "seamonth" width = "500">
+	 <br></center>
+ 
+ 
+	Os materiais do Seaglide derivão de outros mais simples. O Lubrificant é feito de Creepvine Seed Cluster, o Copper Wire de Copper Ore.
+
+	Depois vá para uma região chamada Grassy Plateaus, próximo a Kelp Forest. Você saberá que está no lugar certo quando achar uma vegetação avermelhada. Nesse local, use o Scanner para pegar os blueprints do Vehicle Bay e Seamoth, entre a plantas e os destroços da Aurora.
+	
+	</p>
 	
 	
    </body>
