--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -156,17 +156,34 @@
 	<p>
 	
 	Com tudo consertado e um pequeno estoque de materiais e ferramentas essenciais, é a vez de otimizar o processo de exploração. Enquanto alguns biomas são pacíficos, outros possuem criaturas ameaçadoras e climas pouco favoráveis para a sobrevivência humana. Para chegar a esses locais, você precisará de mais velocidade, iluminação e proteção.
-	
+ 
+    <center><br>
+	<img src = "../midia/fotos/subnautica_foto_seamoth.jpg" alt = "destroços seamoth" title = "destroços seamonth" width = "500">
+	<br></center>
+ 
 	O primeiro passo é obter velocidade, o que te ajudará na busca dos próximos blueprints desse tutorial. Encontre os três fragmentos do Seaglide na Kelp Forest e Safe Shallows. O item é um pequeno veículo de propulsão, com um radar e uma lanterna (botão direto do mouse). Ele é movido a baterias, portanto, fabrique uma reserva e deixe no inventário.
- 
-     <center><br>
-	 <img src = "../midia/fotos/subnautica_foto_seamoth.jpg" alt = "seamoth" title = "seamonth" width = "500">
-	 <br></center>
- 
- 
+	
 	Os materiais do Seaglide derivão de outros mais simples. O Lubrificant é feito de Creepvine Seed Cluster, o Copper Wire de Copper Ore.
 
-	Depois vá para uma região chamada Grassy Plateaus, próximo a Kelp Forest. Você saberá que está no lugar certo quando achar uma vegetação avermelhada. Nesse local, use o Scanner para pegar os blueprints do Vehicle Bay e Seamoth, entre a plantas e os destroços da Aurora.
+	Depois vá para uma região chamada Grassy Plateaus, próximo a Kelp Forest. Você saberá que está no lugar certo quando achar uma vegetação avermelhada. Nesse local, use o Scanner para pegar os blueprints do Vehicle Bay e Seamoth, entre a plantas e os destroços da Aurora.	
+	
+	<center><br>
+	<img src = "../midia/fotos/subnautica_foto_seamoth_2.jpg" alt = "seamoth" title = "seamonth" width = "500">
+	<br></center>
+    
+	O Vehicle Bay é uma estação flutuante que fabrica veículos e o Seamoth um pequeno submarino. Os dois precisam de Power Cell, um eletrônico criado a partir de duas baterias e um Silicone Rubber. As receitas também pedem Titanium Ingot, uma barra condensada composta por Titanium.
+
+	Para conseguir o último material da lista, o Lead, quebre pedras de areia chamadas Sandstone Outcrop. Você vai encontrá-las na Kelp Forest, em Grassy Plateaus e, raramente, em algumas cavernas de Safe Shallows.
+	
+	<h3></h3>
+	
+	<ul>
+	
+		<li><strong>Seaglide:</strong> 1x Battery, 1x Lubrificant, 1x Copper Wire, 1x Titanium</li>
+		<li><strong>Vehicle Bay:</strong> 1x Titanium Ingot, 1x Lubrificant, 1x Power Cell</li>
+		<li><strong>Seamoth:</strong> 1x Titanium Ingot, 1x Power Cell, 2x Glass, 1x Lubrificant, 1x Lead</li>
+	
+	</ul>
 	
 	</p>
 	
