--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -187,6 +187,14 @@
 	
 	</p>
 	
+	<h2>Evite lutas desnecessárias</h2>
+	<p>
+	 Em Subnautica, você pode obter comida sem caçar. Ou seja, não é necessário matar as criaturas para sobreviver – apenas em caso de defesa. Evite qualquer confronto desnecessário com as criaturas marinhas. É um esforço em vão e que provavelmente não trará lucros. E tenha cuidado, os animais são sensíveis a estímulos, como sons e luzes.
+	  
+	 <img src = "../midia/fotos/"> 
+	  
+	</p>
+	
 	
    </body>
    
