--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -191,7 +191,11 @@
 	<p>
 	 Em Subnautica, você pode obter comida sem caçar. Ou seja, não é necessário matar as criaturas para sobreviver – apenas em caso de defesa. Evite qualquer confronto desnecessário com as criaturas marinhas. É um esforço em vão e que provavelmente não trará lucros. E tenha cuidado, os animais são sensíveis a estímulos, como sons e luzes.
 	  
+	 <center><br> 
 	 <img src = "../midia/fotos/subnautica_foto_criatura_stalker.jpg"alt = "Criatura Stalker" title = "Stalker" width = "500"> 
+	 </center><br> 
+	  
+	 Ao encontrar em uma nova área, certifique-se de que as luzes do Seamoth não vão perturbar a paz, verifique seus escudos, reabastecimento de energia, em especial, a temperatura do lado de fora. Seja o ambiente hostil ou não, tudo em Subnautica é feito para que o jogador pense. E procure uma força de usar a situação ao seu favor.
 	  
 	</p>
 	
