--- a/Receitas/Receita 1.html
+++ b/Receitas/Receita 1.html
@@ -46,7 +46,7 @@
 	  <li>Aqueça uma frigideira com azeite em fogo alto.</li>
 	  </br>
 	  <li>Refogue o alho com gengibre até ficar levemente dourado.</li>
-	  </dr>
+	  </br>
 	  <li>Abaixe o fogo, acrescente o frango e deixe dourar dos dois lados.</li>
 	  </br>
 	  <li>Acrescente aproximadamente 1/2 xícara (chá) de água e o shoyu.</li>
@@ -63,12 +63,15 @@
 	  </br>
 	  <li>Sirva com cebolinha salpicada a gosto.</li>
 		
-	<ol>
+	</ol>
 
-    <iframe width = '560' height = '315' src="https://www.youtube.com/embed/QC-AjawYZdQ" title = 'Lamen video'></ifreme> 
+    <center>
+    <iframe width = '560' height = '315' src="https://www.youtube.com/embed/QC-AjawYZdQ" title = 'Lamen video'></ifreme>
+     </center>	
  
-	<p><a href="file:///C:/Users/raian/OneDrive/Área%20de%20Trabalho/HTML/HTML-PROA/Receita%202.html">Ir para resceita 2</a></p>
-	<p><a href = "https://blog.tudogostoso.com.br/dicas-de-cozinha/lamen-ou-ramen/">site original</a></p>
+    <a href = "receita 2.html">Ir para resceita 2</a>
+	
+	<a href "https://blog.tudogostoso.com.br/dicas-de-cozinha/lamen-ou-ramen/" target = "_blank" >site original</a>
 	
 	
    </body>
