--- a/Site subsubnautica/Paginas/Cadastro.html
+++ b/Site subsubnautica/Paginas/Cadastro.html
@@ -20,6 +20,8 @@
          <li><a href= "Pagina_principal.html">Home</a><li>
          <li><a href= "cadastro.html">cadastro no forum </a><li>
 	     <li><a href = "contato.html">Fale conosco</a><li>
+		<li><a href = "sobre_mim.html">Sobre mim ._.</a></li>
+			 
          <!--<li><a = ""></a><li>-->	
 		  
 	     <li><a href = "https://store.steampowered.com/app/264710/Subnautica/?l=portuguese" target = "_blank">	
