--- a/Site subsubnautica/Paginas/contato.html
+++ b/Site subsubnautica/Paginas/contato.html
@@ -17,9 +17,10 @@
    
      <ul>
 	
-		<li><a href= "Pagina_principal.html">Home</a><li>
-		<li><a href= "cadastro.html">cadastro no forum </a><li>
-		<li><a href = "contato.html">Fale conosco</a><li>
+		<li><a href= "Pagina_principal.html">Home</a></li>
+		<li><a href= "cadastro.html">cadastro no forum </a></li>
+		<li><a href = "contato.html">Fale conosco</a></li>
+		<li><a href = "sobre_mim.html">Sobre mim ._.</a></li>
 		<!--<li><a = ""></a><li>-->		
 	   
 		<li><a href = "https://store.steampowered.com/app/264710/Subnautica/?l=portuguese" target = "_blank">	
@@ -79,7 +80,7 @@
 			    </td>
 
 			</tr>
-			
+
 		  </table>
 
        </div>
