--- a/Site subsubnautica/Paginas/sobre_mim.html
+++ b/Site subsubnautica/Paginas/sobre_mim.html
@@ -36,11 +36,11 @@
    
  
     </nav>
-    <section id = "cadastro">
+    <section class = "sobre">
 			
-		  </table>
+	  <img class = "imagem_home" src = "../midia/fotos/HIHI.gif" alt = "Gif Mr.Chaveiro ._." >
 
-       </div>
+       
 	</section>
 	
    </body>
