--- a/Site subsubnautica/Paginas/Pagina_principal.html
+++ b/Site subsubnautica/Paginas/Pagina_principal.html
@@ -21,6 +21,7 @@
 	   	        <ul>
     
 					<li><a href= "Pagina_principal.html">Home</a></li>
+					<li><a href= "galeria.html">Galeria</a></li>
 					<li><a href= "cadastro.html">cadastro no forum </a></li>
 					<li><a href = "contato.html">Fale conosco</a></li>
 					<li><a href = "sobre_mim.html">Sobre mim ._.</a></li>	
