--- a/Site subsubnautica/Paginas/sobre_mim.html
+++ b/Site subsubnautica/Paginas/sobre_mim.html
@@ -7,7 +7,7 @@
 	  
 	  <link  rel = "stylesheet" href = "../css/estilo.css">
 	   
-     <title>Sobre mim ._.</title>
+     <title>Sobre mim ._. Raian mais lindo de tooooodos!</title>
    
    </head>
 
