--- a/Site subsubnautica/Paginas/galeria.html
+++ b/Site subsubnautica/Paginas/galeria.html
@@ -19,6 +19,7 @@
        
           <li><a href= "Pagina_principal.html">Home</a></li>
           <li><a href= "galeria.html">Galeria</a></li>
+          <li><a href= "galeria_2.html">Galeria</a></li>
           <li><a href= "cadastro.html">cadastro no forum </a></li>
           <li><a href = "contato.html">Fale conosco</a></li>
           <li><a href = "sobre_mim.html">Sobre mim ._.</a></li>
